third_party/move/move-compiler-v2/tests/ability-checker/release.move
module 0x42::test {
	struct Impotent {}

	fun test() {
		let x = Impotent {};
		let y = &x;
	}
}
